Fix explorer spacing

--- a/src/css/window.css
+++ b/src/css/window.css
@@ -138,7 +138,7 @@ div.explorer-window {
     }
 
     div.explorer-content {
-        @apply h-full py-8 bg-base-100;
+        @apply h-full p-8 bg-base-100;
         @apply flex flex-row;
 
         box-shadow: inset -2px -2px 0 0 var(--base-100),
